--- a/src/linkbox.css
+++ b/src/linkbox.css
@@ -5,13 +5,13 @@
 	text-decoration-color: #202020;
 }
 
-.linkbox-description {
+#linkbox-description {
 	position: absolute;
 	background-color: #DDDDDD;
 	border: 1px solid #000000;
 	border-radius: 5px 5px 5px 5px;
 	padding: 2px 4px 2px 4px;
 }
-.linkbox-description p {
+#linkbox-description p {
 	margin: 0 0 0 0;
 }
