--- a/src/linkbox.css
+++ b/src/linkbox.css
@@ -8,10 +8,13 @@
 #linkbox-description {
 	position: absolute;
 	background-color: #DDDDDD;
-	border: 1px solid #000000;
-	border-radius: 5px 5px 5px 5px;
-	padding: 2px 4px 2px 4px;
+	border: 1px solid #A0A0A0;
+	border-radius: 10px 10px 10px 10px;
+	padding: 6px 10px 6px 10px;
 }
 #linkbox-description p {
 	margin: 0 0 0 0;
+	font-size: 0.7em;
+	color: #7070FF;
+	text-decoration: underline;
 }
